--- a/reports/tests-report.html
+++ b/reports/tests-report.html
@@ -124,4 +124,10 @@ header {
 	font-size: 1rem;
 	padding: 0 0.5rem;
 }
-</style></head><body><div id="jesthtml-content"><header><h1 id="title">Test Report</h1></header><div id="metadata-container"><div id="timestamp">Start: 2022-01-14 10:36:34</div><div id="summary">1 tests -- 1 passed / 0 failed / 0 pending</div></div><div class="suite-info"><div class="suite-path">/Users/guyharrison/git/provendb-cs-tests/tests/02submitProof.test.js</div><div class="suite-time warn">62.444s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">SubmitProof tests</td><td class="test">simple SubmitProof<div class="failureMessages"/></td><td class="result">passed in 61.224s</td></tr></table></div></body></html>
+</style></head><body><div id="jesthtml-content"><header><h1 id="title">Test Report</h1></header><div id="metadata-container"><div id="timestamp">Start: 2022-02-01 16:20:04</div><div id="summary">4 tests -- 0 passed / 1 failed / 3 pending</div></div><div class="suite-info"><div class="suite-path">/Users/guyharrison/git/provendb-cs-tests/tests/01Crud.test.js</div><div class="suite-time warn">8.362s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="pending"><td class="suite">Basic CRUD tests</td><td class="test">InsertOne<div class="failureMessages"/></td><td class="result">pending</td></tr><tr class="failed"><td class="suite">Basic CRUD tests</td><td class="test">UpdateMany<div class="failureMessages"><pre class="failureMsg">Error: expect(received).toEqual(expected)
+
+Expected value to equal:
+  700
+Received:
+  1300
+    at Object.&lt;anonymous&gt; (/Users/guyharrison/git/provendb-cs-tests/tests/01Crud.test.js:146:28)</pre></div></td><td class="result">failed</td></tr><tr class="pending"><td class="suite">Basic CRUD tests</td><td class="test">UpdateOne<div class="failureMessages"/></td><td class="result">pending</td></tr><tr class="pending"><td class="suite">Basic CRUD tests</td><td class="test">simpleDelete<div class="failureMessages"/></td><td class="result">pending</td></tr></table></div></body></html>
