--- a/reports/tests-report.html
+++ b/reports/tests-report.html
@@ -1,133 +1,232 @@
-<html><head><meta charset="utf-8"/><title>Test Report</title><style type="text/css">html, body {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1rem;
-	margin: 0;
-	padding: 0;
-	color: #333;
+<html><head><meta charset="utf-8"/><title>Test Report</title><style type="text/css">html,
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  margin: 0;
+  padding: 0;
+  color: #333;
 }
 body {
-	padding: 1rem;
-	font-size: 0.85rem;
+  padding: 2rem 1rem;
+  font-size: 0.85rem;
 }
 #jesthtml-content {
-	margin-bottom: 2rem;
+  margin: 0 auto;
+  max-width: 70rem;
 }
 header {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 }
 #title {
-	margin: 0;
-	flex-grow: 1;
+  margin: 0;
+  flex-grow: 1;
 }
 #logo {
-	height: 4rem;
+  height: 4rem;
 }
 #timestamp {
-	font-weight: bold;
-	color: #666;
-	margin-bottom: 0.5rem;
+  color: #777;
+  margin-top: 0.5rem;
 }
+
+/** SUMMARY */
 #summary {
-	color: #999;
-	margin-bottom: 1rem;
+  color: #333;
+  margin: 2rem 0;
+  display: flex;
+  font-family: monospace;
+  font-size: 1rem;
+}
+#summary > div {
+  margin-right: 2rem;
+  background: #eee;
+  padding: 1rem;
+  min-width: 15rem;
+}
+#summary > div:last-child {
+  margin-right: 0;
+}
+@media only screen and (max-width: 720px) {
+  #summary {
+    flex-direction: column;
+  }
+  #summary > div {
+    margin-right: 0;
+    margin-top: 2rem;
+  }
+  #summary > div:first-child {
+    margin-top: 0;
+  }
+}
+
+.summary-total {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+.summary-passed {
+  color: #4f8a10;
+  border-left: 0.4rem solid #4f8a10;
+  padding-left: 0.5rem;
+}
+.summary-failed,
+.summary-obsolete-snapshots {
+  color: #d8000c;
+  border-left: 0.4rem solid #d8000c;
+  padding-left: 0.5rem;
+}
+.summary-pending {
+  color: #9f6000;
+  border-left: 0.4rem solid #9f6000;
+  padding-left: 0.5rem;
+}
+.summary-empty {
+  color: #999;
+  border-left: 0.4rem solid #999;
+}
+
+.test-result {
+  padding: 1rem;
+  margin-bottom: 0.25rem;
+}
+.test-result:last-child {
+  border: 0;
+}
+.test-result.passed {
+  background-color: #dff2bf;
+  color: #4f8a10;
+}
+.test-result.failed {
+  background-color: #ffbaba;
+  color: #d8000c;
+}
+.test-result.pending {
+  background-color: #ffdf61;
+  color: #9f6000;
+}
+
+.test-info {
+  display: flex;
+  justify-content: space-between;
+}
+.test-suitename {
+  width: 20%;
+  text-align: left;
+  font-weight: bold;
+  word-break: break-word;
+}
+.test-title {
+  width: 40%;
+  text-align: left;
+  font-style: italic;
+}
+.test-status {
+  width: 20%;
+  text-align: right;
+}
+.test-duration {
+  width: 10%;
+  text-align: right;
+  font-size: 0.75rem;
+}
+
+.failureMessages {
+  padding: 0 1rem;
+  margin-top: 1rem;
+  border-top: 1px dashed #d8000c;
+}
+.failureMessages.suiteFailure {
+  border-top: none;
+}
+.failureMsg {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
+
+.suite-container {
+  margin-bottom: 2rem;
 }
 .suite-info {
-	padding: 1rem;
-	background-color: #eee;
-	border-bottom: 2px solid #999;
-	color: #999;
-	display: flex;
-	align-items: center;
+  padding: 1rem;
+  background-color: #eee;
+  color: #777;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.25rem;
 }
 .suite-info .suite-path {
-	font-weight: bold;
-	word-break: break-all;
-	flex-grow: 1;
+  word-break: break-all;
+  flex-grow: 1;
+  font-family: monospace;
+  font-size: 1rem;
 }
 .suite-info .suite-time {
-	margin-left: 0.5rem;
-	padding: 0.2rem 0.3rem;
-	font-size: 0.75rem;
+  margin-left: 0.5rem;
+  padding: 0.2rem 0.3rem;
+  font-size: 0.75rem;
 }
 .suite-info .suite-time.warn {
-	background-color: #D8000C;
-	color: #fff;
-}
-.suite-table {
-	width: 100%;
-	font-size: 0.85rem;
-	margin-bottom: 1em;
-}
-.suite-table td {
-	padding: 0.5rem;
-}
-.suite-table tr.passed {
-	background-color: #DFF2BF;
-	color: #4F8A10;
-}
-.suite-table tr.pending {
-	background-color: #FEEFB3;
-	color: #9F6000;
-}
-.suite-table tr.failed {
-	background-color: #FFBABA;
-	color: #D8000C;
-}
-.suite-table td {
-	font-size: 0.85rem;
-	border-bottom: 1px solid #aaa;
-	vertical-align: top;
-}
-.suite-table td.suite {
-	font-weight: bold;
-	width: 20%;
-}
-.suite-table td.test {
-	font-style: italic;
-	width: 60%;
-}
-.suite-table td.test .failureMsg {
-	font-size: 1rem;
-	white-space: pre-wrap;
-	white-space: -moz-pre-wrap;
-	white-space: -pre-wrap;
-	white-space: -o-pre-wrap;
-	word-wrap: break-word;
-}
-.suite-table td.result {
-	width: 20%;
-	text-align: right;
+  background-color: #d8000c;
+  color: #fff;
 }
 
 /* CONSOLE LOGS */
 .suite-consolelog {
-	margin-bottom: 2rem;
-	padding: 1rem;
-	background-color: #efefef;
+  margin-bottom: 0.25rem;
+  padding: 1rem;
+  background-color: #efefef;
 }
 .suite-consolelog-header {
-	font-weight: bold;
+  font-weight: bold;
 }
 .suite-consolelog-item {
-	padding: 0.5rem;
+  padding: 0.5rem;
 }
 .suite-consolelog-item pre {
-	margin: 0;
+  margin: 0.5rem 0;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
 .suite-consolelog-item-origin {
-	color: #777;
-	font-weight: bold;
+  color: #777;
+  font-weight: bold;
 }
 .suite-consolelog-item-message {
-	color: #000;
-	font-size: 1rem;
-	padding: 0 0.5rem;
+  color: #000;
+  font-size: 1rem;
+  padding: 0 0.5rem;
 }
-</style></head><body><div id="jesthtml-content"><header><h1 id="title">Test Report</h1></header><div id="metadata-container"><div id="timestamp">Start: 2022-02-08 08:51:38</div><div id="summary">8 tests -- 7 passed / 1 failed / 0 pending</div></div><div class="suite-info"><div class="suite-path">/Users/guyharrison/git/provendb-cs-tests/tests/01Crud.test.js</div><div class="suite-time warn">35.334s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">Basic CRUD tests</td><td class="test">InsertOne<div class="failureMessages"/></td><td class="result">passed in 5.067s</td></tr><tr class="failed"><td class="suite">Basic CRUD tests</td><td class="test">UpdateMany<div class="failureMessages"><pre class="failureMsg">Error: expect(received).toEqual(expected)
 
-Expected value to equal:
-  700
-Received:
-  500
-    at Object.&lt;anonymous&gt; (/Users/guyharrison/git/provendb-cs-tests/tests/01Crud.test.js:148:28)</pre></div></td><td class="result">failed</td></tr><tr class="passed"><td class="suite">Basic CRUD tests</td><td class="test">UpdateOne<div class="failureMessages"/></td><td class="result">passed in 5.276s</td></tr><tr class="passed"><td class="suite">Basic CRUD tests</td><td class="test">simpleDelete<div class="failureMessages"/></td><td class="result">passed in 11.18s</td></tr></table><div class="suite-info"><div class="suite-path">/Users/guyharrison/git/provendb-cs-tests/tests/02submitProof.test.js</div><div class="suite-time warn">128.516s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">SubmitProof tests</td><td class="test">simple SubmitProof<div class="failureMessages"/></td><td class="result">passed in 68.261s</td></tr><tr class="passed"><td class="suite">SubmitProof tests</td><td class="test">proof format is valid<div class="failureMessages"/></td><td class="result">passed in 59.214s</td></tr></table><div class="suite-info"><div class="suite-path">/Users/guyharrison/git/provendb-cs-tests/tests/03getDocumentProof.test.js</div><div class="suite-time warn">113.802s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">SubmitProof tests</td><td class="test">simple SubmitProof<div class="failureMessages"/></td><td class="result">passed in 61.101s</td></tr><tr class="passed"><td class="suite">SubmitProof tests</td><td class="test">proof format is valid<div class="failureMessages"/></td><td class="result">passed in 52.21s</td></tr></table></div></body></html>
+/* OBSOLETE SNAPSHOTS */
+.suite-obsolete-snapshots {
+  margin-bottom: 0.25rem;
+  padding: 1rem;
+  background-color: #ffbaba;
+  color: #d8000c;
+}
+.suite-obsolete-snapshots-header {
+  font-weight: bold;
+}
+.suite-obsolete-snapshots-item {
+  padding: 0.5rem;
+}
+.suite-obsolete-snapshots-item pre {
+  margin: 0.5rem 0;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
+.suite-obsolete-snapshots-item-message {
+  color: #000;
+  font-size: 1rem;
+  padding: 0 0.5rem;
+}
+</style></head><body><div id="jesthtml-content"><header><h1 id="title">Test Report</h1></header><div id="metadata-container"><div id="timestamp">Started: 2022-02-11 10:07:25</div><div id="summary"><div id="suite-summary"><div class="summary-total">Suites (1)</div><div class="summary-passed">1 passed</div><div class="summary-failed summary-empty">0 failed</div><div class="summary-pending summary-empty">0 pending</div></div><div id="test-summary"><div class="summary-total">Tests (4)</div><div class="summary-passed">1 passed</div><div class="summary-failed summary-empty">0 failed</div><div class="summary-pending">3 pending</div></div></div></div><div id="suite-1" class="suite-container"><div class="suite-info"><div class="suite-path">/Users/guyharrison/git/provendb-cs-tests/tests/03getDocumentProof.test.js</div><div class="suite-time warn">125.321s</div></div><div class="suite-tests"><div class="test-result pending"><div class="test-info"><div class="test-suitename">Get Document Proof</div><div class="test-title">simple getDocumentProof</div><div class="test-status">pending</div><div class="test-duration">0s</div></div></div><div class="test-result pending"><div class="test-info"><div class="test-suitename">Get Document Proof</div><div class="test-title">simple getDocumentProof</div><div class="test-status">pending</div><div class="test-duration">0s</div></div></div><div class="test-result passed"><div class="test-info"><div class="test-suitename">Get Document Proof</div><div class="test-title">getDocumentProof multi-versions</div><div class="test-status">passed</div><div class="test-duration">123.682s</div></div></div><div class="test-result pending"><div class="test-info"><div class="test-suitename">Get Document Proof</div><div class="test-title">getDocumentProof chainpoint format</div><div class="test-status">pending</div><div class="test-duration">0s</div></div></div></div></div></div></body></html>
